--- a/select.html
+++ b/select.html
@@ -69,7 +69,7 @@
   ================================================== -->
   <div class="jumbotron masthead">
     <div class="container">
-      <h1>Twitter Bootstrap Form Helpers</h1>
+      <h2>Twitter Bootstrap Form Helpers</h2>
       <p class="lead">Extend Twitter Bootstrap—now with 12 custom jQuery plugins.</p>
       <p><a href="https://github.com/vlamanna/BootstrapFormHelpers/zipball/master" class="btn btn-primary btn-large">Download Bootstrap Form Helpers</a></p>
       <ul class="masthead-links">
@@ -88,11 +88,17 @@
         <li>
           <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=vlamanna&amp;repo=BootstrapFormHelpers&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" style="width: 98px; height: 20px;"></iframe>
         </li>
-        <li class="follow-btn">
-          <iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/follow_button.1347008535.html#_=1350836523114&amp;id=twitter-widget-1&amp;lang=en&amp;screen_name=vincentlamanna&amp;show_count=true&amp;show_screen_name=true&amp;size=m" class="twitter-follow-button" style="width: 236px; height: 20px; " title="Twitter Follow Button" data-twttr-rendered="true"></iframe>
-        </li>
-        <li class="tweet-btn">
-          <iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/tweet_button.1347008535.html#_=1350836523111&amp;count=horizontal&amp;id=twitter-widget-0&amp;lang=en&amp;size=m&amp;text=Bootstrap%20Form%20Helpers&amp;url=http%3A%2F%2Fvlamanna.github.com%2FBootstrapFormHelpers%2F&amp;via=vincentlamanna" class="twitter-share-button twitter-count-horizontal" style="width: 107px; height: 20px; " title="Twitter Tweet Button" data-twttr-rendered="true"></iframe>
+        <li style="height:15px; min-width:300px">
+          <!-- AddThis Button BEGIN -->
+          <div class="addthis_toolbox addthis_default_style ">
+          <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+          <a class="addthis_button_tweet"></a>
+          <a class="addthis_button_pinterest_pinit"></a>
+          <a class="addthis_counter addthis_pill_style"></a>
+          </div>
+          <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+          <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4df14df26c87e5bd"></script>
+          <!-- AddThis Button END -->
         </li>
       </ul>
     </div>
@@ -138,7 +144,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
         ================================================== -->
         <section id="selectbox">
           <div class="page-header">
-            <h2>Select jQuery plugin for Twitter Bootstrap</h2>
+            <h1>Select jQuery plugin for Twitter Bootstrap</h1>
           </div>
           
           <script type="text/javascript"><!--
@@ -153,8 +159,8 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
           src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
           </script>
           
-          <h3>About select</h3>
-          <p>For adding a select box, include bootstrap-formhelpers-selectbox.js once alongside the other JS files.</p>
+          <h3>About <i>select</i></h3>
+          <p>For adding a <b>select</b> box, include bootstrap-formhelpers-selectbox.js once alongside the other JS files.</p>
           <h3>Use cases</h3>
 
           <p>Simple example for adding a select box</p>
