--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
           <p>These <a target="_blank" href="http://plugins.jquery.com/"><i>jQuery plugins</i></a> are based on <a target="_blank" href="http://twitter.github.com/bootstrap/"><i>Twitter Bootstrap</i></a>.</p>
 
           <p>These jQuery plugins are distributed for free but you can contribute and make them better.</p>
+          
+          <p><iframe src='https://api.bountysource.com/user/fundraisers/476/embed' style='width: 238px; height: 402px; overflow: hidden; border: 0px;'></iframe></p>
 
         </section>
 
