Update datepicker documentation

--- a/datepicker.html
+++ b/datepicker.html
@@ -223,7 +223,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 
           <p>Example showing how to set a default date and format.</p>
           <form class="bs-docs-example form-inline">
-            <div class="bfh-datepicker" data-format="y-m-d" data-date="2000-01-01">
+            <div class="bfh-datepicker" data-format="y-m-d" data-date="today">
               <div class="input-prepend bfh-datepicker-toggle" data-toggle="bfh-datepicker">
                 <span class="add-on"><i class="icon-calendar"></i></span>
                 <input type="text" class="input-medium" readonly>
@@ -252,7 +252,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
               </div>
             </div>
           </form>
-          <pre class="prettyprint">&lt;div class="bfh-datepicker" data-format="y-m-d" data-date="2000-01-01"&gt;
+          <pre class="prettyprint">&lt;div class="bfh-datepicker" data-format="y-m-d" data-date="today"&gt;
   &lt;div class="input-prepend bfh-datepicker-toggle" data-toggle="bfh-datepicker"&gt;
     &lt;span class="add-on"&gt;&lt;i class="icon-calendar"&gt;&lt;/i&gt;&lt;/span&gt;
     &lt;input type="text" class="input-medium" readonly&gt;
@@ -283,7 +283,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 
           <p>Example showing how to set a range and not close on selecting a date.</p>
           <form class="bs-docs-example form-inline">
-            <div class="bfh-datepicker" data-start="01/15/2013" data-end="11/15/2013" data-close="0">
+            <div class="bfh-datepicker" data-start="01/15/2013" data-end="today" data-close="0">
               <div class="input-prepend bfh-datepicker-toggle" data-toggle="bfh-datepicker">
                 <span class="add-on"><i class="icon-calendar"></i></span>
                 <input type="text" class="input-medium" readonly>
@@ -312,7 +312,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
               </div>
             </div>
           </form>
-          <pre class="prettyprint">&lt;div class="bfh-datepicker" data-start="01/15/2013" data-end="11/15/2013" data-close="0"&gt;
+          <pre class="prettyprint">&lt;div class="bfh-datepicker" data-start="01/15/2013" data-end="today" data-close="0"&gt;
   &lt;div class="input-prepend bfh-datepicker-toggle" data-toggle="bfh-datepicker"&gt;
     &lt;span class="add-on"&gt;&lt;i class="icon-calendar"&gt;&lt;/i&gt;&lt;/span&gt;
     &lt;input type="text" class="input-medium" readonly&gt;
