Adding dist file.

--- a/datepicker.html
+++ b/datepicker.html
@@ -378,11 +378,10 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="assets/js/google-code-prettify/prettify.js"></script>
 
-   
-    <script src="assets/js/bootstrap-formhelpers-datepicker.en_US.js"></script>
-    <script src="assets/js/bootstrap-formhelpers-datepicker.js"></script>
+    <script src="assets/js/bootstrap-formhelpers.min.js"></script>
 	
 </body></html>
