--- a/phone.html
+++ b/phone.html
@@ -217,10 +217,10 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="assets/js/google-code-prettify/prettify.js"></script>
 
-    <script src="assets/js/bootstrap-formhelpers-phone.format.js"></script>
-    <script src="assets/js/bootstrap-formhelpers-phone.js"></script>
+    <script src="assets/js/bootstrap-formhelpers.min.js"></script>
     
 </body></html>
