--- a/timepicker.html
+++ b/timepicker.html
@@ -311,5 +311,6 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="assets/js/google-code-prettify/prettify.js"></script>
 
-    <script src="assets/js/bootstrap-formhelpers-timepicker.js"></script>
+    <script src="assets/js/bootstrap-formhelpers.min.js"></script>
+    
 </body></html>
