--- a/currency.html
+++ b/currency.html
@@ -264,8 +264,6 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="assets/js/google-code-prettify/prettify.js"></script>
 
-    <script src="assets/js/bootstrap-formhelpers-selectbox.js"></script>
-    <script src="assets/js/bootstrap-formhelpers-currencies.en_US.js"></script>
-    <script src="assets/js/bootstrap-formhelpers-currencies.js"></script>
+    <script src="assets/js/bootstrap-formhelpers.min.js"></script>
 	
 </body></html>
