--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -10,11 +10,16 @@
   <link rel="stylesheet" href="vendor/qunit-1.12.0.css" media="screen">
   <script src="vendor/qunit-1.12.0.js"></script>
 
-  <!--  plugin sources -->
+  <!-- language files -->
+  <script src="../../js/lang/en_US/bootstrap-formhelpers-countries.en_US.js"></script>
+  
+  <!-- plugin sources -->
   <script src="../../js/bootstrap-formhelpers-selectbox.js"></script>
+  <script src="../../js/bootstrap-formhelpers-countries.js"></script>
 
   <!-- unit tests -->
   <script src="unit/bootstrap-formhelpers-selectbox.js"></script>
+  <script src="unit/bootstrap-formhelpers-countries.js"></script>
 
 </head>
 <body>
