--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -13,16 +13,19 @@
   <!-- language files -->
   <script src="../../js/lang/en_US/bootstrap-formhelpers-countries.en_US.js"></script>
   <script src="../../js/lang/en_US/bootstrap-formhelpers-states.en_US.js"></script>
+  <script src="../../js/lang/en_US/bootstrap-formhelpers-currencies.en_US.js"></script>
   
   <!-- plugin sources -->
   <script src="../../js/bootstrap-formhelpers-selectbox.js"></script>
   <script src="../../js/bootstrap-formhelpers-countries.js"></script>
   <script src="../../js/bootstrap-formhelpers-states.js"></script>
+  <script src="../../js/bootstrap-formhelpers-currencies.js"></script>
 
   <!-- unit tests -->
   <script src="unit/bootstrap-formhelpers-selectbox.js"></script>
   <script src="unit/bootstrap-formhelpers-countries.js"></script>
   <script src="unit/bootstrap-formhelpers-states.js"></script>
+  <script src="unit/bootstrap-formhelpers-currencies.js"></script>
 
 </head>
 <body>
