--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -15,6 +15,9 @@
   <script src="../../js/lang/en_US/bootstrap-formhelpers-states.en_US.js"></script>
   <script src="../../js/lang/en_US/bootstrap-formhelpers-currencies.en_US.js"></script>
   <script src="../../js/lang/en_US/bootstrap-formhelpers-languages.en_US.js"></script>
+  <script src="../../js/lang/en_US/bootstrap-formhelpers-timezones.en_US.js"></script>
+  <script src="../../js/lang/en_US/bootstrap-formhelpers-fonts.en_US.js"></script>
+  <script src="../../js/lang/en_US/bootstrap-formhelpers-fontsizes.en_US.js"></script>
   
   <!-- plugin sources -->
   <script src="../../js/bootstrap-formhelpers-selectbox.js"></script>
@@ -22,6 +25,9 @@
   <script src="../../js/bootstrap-formhelpers-states.js"></script>
   <script src="../../js/bootstrap-formhelpers-currencies.js"></script>
   <script src="../../js/bootstrap-formhelpers-languages.js"></script>
+  <script src="../../js/bootstrap-formhelpers-timezones.js"></script>
+  <script src="../../js/bootstrap-formhelpers-fonts.js"></script>
+  <script src="../../js/bootstrap-formhelpers-fontsizes.js"></script>
 
   <!-- unit tests -->
   <script src="unit/bootstrap-formhelpers-selectbox.js"></script>
@@ -29,6 +35,9 @@
   <script src="unit/bootstrap-formhelpers-states.js"></script>
   <script src="unit/bootstrap-formhelpers-currencies.js"></script>
   <script src="unit/bootstrap-formhelpers-languages.js"></script>
+  <script src="unit/bootstrap-formhelpers-timezones.js"></script>
+  <script src="unit/bootstrap-formhelpers-fonts.js"></script>
+  <script src="unit/bootstrap-formhelpers-fontsizes.js"></script>
 
 </head>
 <body>
