--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -18,6 +18,7 @@
   <script src="../../js/lang/en_US/bootstrap-formhelpers-timezones.en_US.js"></script>
   <script src="../../js/lang/en_US/bootstrap-formhelpers-fonts.en_US.js"></script>
   <script src="../../js/lang/en_US/bootstrap-formhelpers-fontsizes.en_US.js"></script>
+  <script src="../../js/lang/en_US/bootstrap-formhelpers-googlefonts.en_US.js"></script>
   
   <!-- plugin sources -->
   <script src="../../js/bootstrap-formhelpers-selectbox.js"></script>
@@ -28,6 +29,7 @@
   <script src="../../js/bootstrap-formhelpers-timezones.js"></script>
   <script src="../../js/bootstrap-formhelpers-fonts.js"></script>
   <script src="../../js/bootstrap-formhelpers-fontsizes.js"></script>
+  <script src="../../js/bootstrap-formhelpers-googlefonts.js"></script>
 
   <!-- unit tests -->
   <script src="unit/bootstrap-formhelpers-selectbox.js"></script>
@@ -38,6 +40,7 @@
   <script src="unit/bootstrap-formhelpers-timezones.js"></script>
   <script src="unit/bootstrap-formhelpers-fonts.js"></script>
   <script src="unit/bootstrap-formhelpers-fontsizes.js"></script>
+  <script src="unit/bootstrap-formhelpers-googlefonts.js"></script>
 
 </head>
 <body>
