Adding unit test for phone.

--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -19,6 +19,7 @@
   <script src="../../js/lang/en_US/bootstrap-formhelpers-fonts.en_US.js"></script>
   <script src="../../js/lang/en_US/bootstrap-formhelpers-fontsizes.en_US.js"></script>
   <script src="../../js/lang/en_US/bootstrap-formhelpers-googlefonts.en_US.js"></script>
+  <script src="../../js/lang/en_US/bootstrap-formhelpers-phone.en_US.js"></script>
   
   <!-- plugin sources -->
   <script src="../../js/bootstrap-formhelpers-selectbox.js"></script>
@@ -30,6 +31,7 @@
   <script src="../../js/bootstrap-formhelpers-fonts.js"></script>
   <script src="../../js/bootstrap-formhelpers-fontsizes.js"></script>
   <script src="../../js/bootstrap-formhelpers-googlefonts.js"></script>
+  <script src="../../js/bootstrap-formhelpers-phone.js"></script>
 
   <!-- unit tests -->
   <script src="unit/bootstrap-formhelpers-selectbox.js"></script>
@@ -41,6 +43,7 @@
   <script src="unit/bootstrap-formhelpers-fonts.js"></script>
   <script src="unit/bootstrap-formhelpers-fontsizes.js"></script>
   <script src="unit/bootstrap-formhelpers-googlefonts.js"></script>
+  <script src="unit/bootstrap-formhelpers-phone.js"></script>
 
 </head>
 <body>
