Wrapping unit tests.

--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -4,11 +4,11 @@
   <title>Bootstrap Form Helpers Test Suite</title>
 
   <!-- jquery -->
-  <script src="vendor/jquery-1.10.2.js"></script>
+  <script src="vendor/js/jquery-1.10.2.js"></script>
 
   <!-- qunit -->
-  <link rel="stylesheet" href="vendor/qunit-1.12.0.css" media="screen">
-  <script src="vendor/qunit-1.12.0.js"></script>
+  <link rel="stylesheet" href="vendor/css/qunit-1.12.0.css" media="screen">
+  <script src="vendor/js/qunit-1.12.0.js"></script>
 
   <!-- language files -->
   <script src="../../js/lang/en_US/bootstrap-formhelpers-countries.en_US.js"></script>
@@ -20,6 +20,7 @@
   <script src="../../js/lang/en_US/bootstrap-formhelpers-fontsizes.en_US.js"></script>
   <script src="../../js/lang/en_US/bootstrap-formhelpers-googlefonts.en_US.js"></script>
   <script src="../../js/lang/en_US/bootstrap-formhelpers-phone.en_US.js"></script>
+  <script src="../../js/lang/en_US/bootstrap-formhelpers-datepicker.en_US.js"></script>
   
   <!-- plugin sources -->
   <script src="../../js/bootstrap-formhelpers-selectbox.js"></script>
@@ -32,6 +33,8 @@
   <script src="../../js/bootstrap-formhelpers-fontsizes.js"></script>
   <script src="../../js/bootstrap-formhelpers-googlefonts.js"></script>
   <script src="../../js/bootstrap-formhelpers-phone.js"></script>
+  <script src="../../js/bootstrap-formhelpers-datepicker.js"></script>
+  <script src="../../js/bootstrap-formhelpers-timepicker.js"></script>
 
   <!-- unit tests -->
   <script src="unit/bootstrap-formhelpers-selectbox.js"></script>
@@ -44,6 +47,8 @@
   <script src="unit/bootstrap-formhelpers-fontsizes.js"></script>
   <script src="unit/bootstrap-formhelpers-googlefonts.js"></script>
   <script src="unit/bootstrap-formhelpers-phone.js"></script>
+  <script src="unit/bootstrap-formhelpers-datepicker.js"></script>
+  <script src="unit/bootstrap-formhelpers-timepicker.js"></script>
 
 </head>
 <body>
