--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -52,12 +52,7 @@
 
 </head>
 <body>
-  <div>
-    <h1 id="qunit-header">Bootstrap Form Helpers Test Suite</h1>
-    <h2 id="qunit-banner"></h2>
-    <h2 id="qunit-userAgent"></h2>
-    <ol id="qunit-tests"></ol>
-    <div id="qunit-fixture"></div>
-  </div>
+  <div id="qunit"></div>
+  <div id="qunit-fixture"></div>
 </body>
 </html>
