--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -35,6 +35,8 @@
   <script src="../../js/bootstrap-formhelpers-phone.js"></script>
   <script src="../../js/bootstrap-formhelpers-datepicker.js"></script>
   <script src="../../js/bootstrap-formhelpers-timepicker.js"></script>
+  <script src="../../js/bootstrap-formhelpers-slider.js"></script>
+  <script src="../../js/bootstrap-formhelpers-colorpicker.js"></script>
 
   <!-- unit tests -->
   <script src="unit/bootstrap-formhelpers-selectbox.js"></script>
@@ -49,6 +51,8 @@
   <script src="unit/bootstrap-formhelpers-phone.js"></script>
   <script src="unit/bootstrap-formhelpers-datepicker.js"></script>
   <script src="unit/bootstrap-formhelpers-timepicker.js"></script>
+  <script src="unit/bootstrap-formhelpers-slider.js"></script>
+  <script src="unit/bootstrap-formhelpers-colorpicker.js"></script>
 
 </head>
 <body>
