--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -37,6 +37,7 @@
   <script src="../../js/bootstrap-formhelpers-timepicker.js"></script>
   <script src="../../js/bootstrap-formhelpers-slider.js"></script>
   <script src="../../js/bootstrap-formhelpers-colorpicker.js"></script>
+  <script src="../../js/bootstrap-formhelpers-number.js"></script>
 
   <!-- unit tests -->
   <script src="unit/bootstrap-formhelpers-selectbox.js"></script>
@@ -53,6 +54,7 @@
   <script src="unit/bootstrap-formhelpers-timepicker.js"></script>
   <script src="unit/bootstrap-formhelpers-slider.js"></script>
   <script src="unit/bootstrap-formhelpers-colorpicker.js"></script>
+  <script src="unit/bootstrap-formhelpers-number.js"></script>
 
 </head>
 <body>
