--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -21,6 +21,7 @@
   <script src="../../js/lang/en_US/bootstrap-formhelpers-googlefonts.en_US.js"></script>
   <script src="../../js/lang/en_US/bootstrap-formhelpers-phone.en_US.js"></script>
   <script src="../../js/lang/en_US/bootstrap-formhelpers-datepicker.en_US.js"></script>
+  <script src="../../js/lang/en_US/bootstrap-formhelpers-timepicker.en_US.js"></script>
   
   <!-- plugin sources -->
   <script src="../../js/bootstrap-formhelpers-selectbox.js"></script>
